[workspace]
resolver = "3"
members = ["chapter-one"]

[profile.release]
strip = true

[workspace.dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = { version = "0.30.13", features = ["android-native-activity"] }


[workspace.target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0.3", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[workspace.package.metadata.wasm-pack.profile.release]
wasm-opt = false
